--- a/basic-spring-portlet/basic-spring-portlet/pom.xml
+++ b/basic-spring-portlet/basic-spring-portlet/pom.xml
@@ -117,6 +117,12 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
     </dependencies>
 
     <repositories>
