We added multiple views in one controller.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
@@ -2,3 +2,5 @@ javax.portlet.title=Basic Spring Portlet
 
 basicspring-question=Hi, what's your name?
 basicspring-submit=Submit
+basicspring-greeting=Hi
+basicspring-back=Back
