We added a spring form that is represented on the controller by PersonPto. We use custom PropertyEditor for date input paring.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
@@ -1,6 +1,9 @@
 javax.portlet.title=Basic Spring Portlet
 
-basicspring-question=Hi, what's your name?
+basicspring-question=Hi, what's your name and what's your date of birth?
 basicspring-submit=Submit
 basicspring-greeting=Hi
 basicspring-back=Back
+basicspring-form-name=Name
+basicspring-form-date-of-birth=Date of Birth
+basicspring-bithday-in=Your birthday is in {0} days
