--- a/basic-spring-portlet/basic-spring-portlet/pom.xml
+++ b/basic-spring-portlet/basic-spring-portlet/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
         </dependency>
+
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
     </dependencies>
 
     <repositories>
