We added spring validation for our form.

--- a/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
+++ b/basic-spring-portlet/basic-spring-portlet/src/main/resources/content/basic-spring-portlet.properties
@@ -1,5 +1,11 @@
 javax.portlet.title=Basic Spring Portlet
 
+typeMismatch.org.joda.time.DateTime=Incorrect date format.
+basicspring-err-null-value=This his value is required.
+basicspring-err-to-early=Specified date in the distant past.
+basicspring-err-to-late=Specified date in the distant future.
+
+
 basicspring-question=Hi, what's your name and what's your date of birth?
 basicspring-submit=Submit
 basicspring-greeting=Hi
@@ -7,3 +13,4 @@ basicspring-back=Back
 basicspring-form-name=Name
 basicspring-form-date-of-birth=Date of Birth
 basicspring-bithday-in=Your birthday is in {0} days
+basicspring-bithday=and Happy Birthday\!\!\!
